# webinar-transcriber

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .prettierrc.json  AGENTS.md  LICENSE  LICENSE-3RDPARTY.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: architecture.md  asr_chunking.md  development.md  languages.md  pipeline.md  releasing.md  troubleshooting.md  usage.md
webinar_transcriber/: __init__.py  __main__.py  _env.py  align.py  asr.py  cli.py  diagnostics.py  io.py  json_utils.py  labels.py  llm.py  llm_shared.py  media.py  models.py  normalized_audio.py  paths.py  processor.py  processor_asr.py  processor_llm.py  processor_support.py  progress.py  reconciliation.py  replay.py  reporter.py  segmentation.py  structure.py  structure_interludes.py  structure_scoring.py  structure_sections.py  text.py  text_utils.py  transcript_processing.py  transcription_audio.py  ui.py  usage.py  whispercpp.py
webinar_transcriber/asr/: __init__.py  carryover.py  config.py  transcriber.py  windows.py
webinar_transcriber/assets/: __init__.py
webinar_transcriber/diarization/: __init__.py  config.py  contracts.py  sherpa_diarizer.py
webinar_transcriber/export/: __init__.py  docx_report.py  formatting.py  json_report.py  markdown.py  subtitles.py
webinar_transcriber/llm/: __init__.py  anthropic_backend.py  contracts.py  flow.py  openai_backend.py  processor.py  prompts.py  providers.py  schemas.py  shared.py  types.py  utils.py
webinar_transcriber/ocr/: __init__.py  engine.py
webinar_transcriber/processor/: __init__.py  asr.py  asr_pipeline.py  llm.py  llm_types.py  report.py  stages.py  support.py  transcribe.py  types.py
webinar_transcriber/structure/: __init__.py  constants.py  interludes.py  scoring.py  sections.py
webinar_transcriber/tests/: __init__.py  conftest.py  test_align.py  test_asr.py  test_cli.py  test_coalesce.py  test_diarization.py  test_export.py  test_labels.py  test_llm.py  test_llm_utils.py  test_media.py  test_models.py  test_normalized_audio.py  test_ocr.py  test_paths.py  test_processor.py  test_reconciliation.py  test_replay.py  test_structure.py  test_transcript_normalize.py  test_transcript_processing.py  test_transcription_audio.py  test_ui.py  test_usage.py  test_version.py  test_video_pipeline.py  test_whispercpp.py
webinar_transcriber/transcript/: __init__.py  coalesce.py  normalize.py  reconcile.py
webinar_transcriber/video/: __init__.py  frames.py  scenes.py
webinar_transcriber/video/tests/: __init__.py  test_video_pipeline.py
webinar_transcriber/whispercpp/: __init__.py  bindings.py  library.py
