[project]
name = "webinar-transcriber"
dynamic = ["version"]
description = "Local-first CLI for transcribing webinar videos and audio recordings."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Yury Bayda" },
]
keywords = ["transcription", "speech-to-text", "whisper.cpp", "webinar", "audio", "video"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.72.0,<1.0.0",
    "click>=8.3.1,<9.0.0",
    "huggingface-hub>=0.36.0,<1.0.0",
    "numpy>=2.4.3,<3.0.0",
    "openai>=2.30.0,<3.0.0",
    "pillow>=12.1.1,<13.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "rich>=14.3.3,<15.0.0",
    "silero-vad>=6.2.1,<7.0.0",
]

[project.scripts]
webinar-transcriber = "webinar_transcriber.cli:main"

[build-system]
requires = ["hatch-vcs>=0.5.0,<1.0.0", "hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.5,<8.0.0",
    "mdformat>=1.0.0,<2.0.0",
    "pymarkdownlnt>=0.9.36,<1.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.7,<1.0.0",
    "ty>=0.0.25,<1.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=webinar_transcriber",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--durations=5",
    "--durations-min=0",
]
testpaths = ["webinar_transcriber"]

[tool.coverage.run]
branch = false
source = ["webinar_transcriber"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    # Core families.
    "F",   # Pyflakes.
    "E",   # pycodestyle.
    "W",   # pycodestyle.
    "D",   # pydocstyle.

    # Standalone families.
    "I",   # isort.
    "N",   # pep8-naming.
    "UP",  # pyupgrade.

    # flake8 families:
    "A",     # flake8-builtins.
    "ANN",   # flake8-annotations.
    "YTT",   # flake8-2020.
    "ASYNC", # flake8-async.
    "B",     # flake8-bugbear.
    "BLE",   # flake8-blind-except.
    "C4",    # flake8-comprehensions.
    "EXE",   # flake8-executable.
    "G",     # flake8-logging-format.
    "ISC",   # flake8-implicit-str-concat.
    "PIE",   # flake8-pie.
    "PT",    # flake8-pytest-style.
    "PYI",   # flake8-pyi.
    "RSE",   # flake8-raise.
    "S",     # flake8-bandit.
    "RET",   # flake8-return.
    "SIM",   # flake8-simplify.
    "SLF",   # flake8-self.
    "TCH",   # flake8-type-checking.
    "ARG",   # flake8-unused-arguments.
    "DTZ",   # flake8-datetimez.
    "PTH",   # flake8-use-pathlib.
    "TID",   # flake8-tidy-imports.

    # Other families.
    "C90",  # mccabe.
    "ERA",  # eradicate.
    "FLY",  # flynt.
    "PLC",  # Pylint.
    "PLE",  # Pylint.
    "PLW",  # Pylint.
    "PERF", # Perflint.
    "RUF",  # Ruff-specific rules.
]
# `subprocess` and partial executable-path rules are too noisy for this CLI-heavy
# codebase; command safety is reviewed at each call site instead.
ignore = ["S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use plain `assert`, narrow private seams, and test-only helpers.
"webinar_transcriber/**/tests/*.py" = ["ANN", "ARG", "D", "DTZ", "PLC0415", "S101", "S108"]
# ASR tests exercise narrow failure paths on private transcriber helpers.
"webinar_transcriber/tests/test_asr.py" = ["SLF001"]
# UI reporter tests inspect internal state transitions that are hard to assert publicly.
"webinar_transcriber/tests/test_ui.py" = ["SLF001"]
# whisper.cpp tests validate low-level wrapper behavior through private bridge methods.
"webinar_transcriber/tests/test_whispercpp.py" = ["SLF001"]

[tool.pymarkdown.plugins.md013]
line_length = 100
code_block_line_length = 100
heading_line_length = 100

[tool.ty.src]
include = ["webinar_transcriber"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.*)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "webinar_transcriber/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["webinar_transcriber"]
