[project]
name = "webinar-transcriber"
dynamic = ["version"]
description = "Local-first CLI for transcribing webinar videos and audio recordings."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Yury Bayda" },
]
keywords = ["transcription", "speech-to-text", "whisper.cpp", "webinar", "audio", "video"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1,<9.0.0",
    "imagehash>=4.3.1,<5.0.0",
    "numpy>=2.4.3,<3.0.0",
    "pillow>=12.1.1,<13.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pywhispercpp>=1.4.1,<2.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "rich>=14.3.3,<15.0.0",
    "silero-vad>=6.2.1,<7.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=2.30.0,<3.0.0",
    "anthropic>=0.72.0,<1.0.0",
]

[project.scripts]
webinar-transcriber = "webinar_transcriber.cli:main"

[build-system]
requires = ["hatch-vcs>=0.5.0,<1.0.0", "hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.5,<8.0.0",
    "mdformat>=1.0.0,<2.0.0",
    "pymarkdownlnt>=0.9.36,<1.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.7,<1.0.0",
    "ty>=0.0.25,<1.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=webinar_transcriber",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--durations=5",
    "--durations-min=0",
]
testpaths = ["webinar_transcriber"]

[tool.uv.sources]
pywhispercpp = { git = "https://github.com/absadiki/pywhispercpp", tag = "v1.4.1" }

[tool.uv]
no-build-isolation-package = ["pywhispercpp"]

[tool.uv.extra-build-variables]
pywhispercpp = { NO_REPAIR = "1" }

[tool.coverage.run]
branch = false
source = ["webinar_transcriber"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    # Core families
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # pydocstyle
    "D",
    # pydoclint
    "DOC",

    # Standalone families
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",

    # flake8 families:
    # flake8-builtins
    "A",
    # flake8-annotations
    "ANN",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # flake8-comprehensions
    "C4",
    # flake8-executable
    "EXE",
    # flake8-future-annotations
    "FA",
    # flake8-logging-format
    "G",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-pie
    "PIE",
    # flake8-pytest-style
    "PT",
    # flake8-pyi
    "PYI",
    # flake8-raise
    "RSE",
    # flake8-bandit
    "S",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-self
    "SLF",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # flake8-datetimez
    "DTZ",
    # flake8-use-pathlib
    "PTH",
    # flake8-tidy-imports
    "TID",

    # Other families
    # mccabe
    "C90",
    # eradicate
    "ERA",
    # flynt
    "FLY",
    # refurb
    "FURB",
    # Pylint
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]
# `subprocess` and partial executable-path rules are too noisy for this CLI-heavy
# codebase; command safety is reviewed at each call site instead.
ignore = [
    # Public CLI/protocol/orchestration APIs intentionally take structured inputs
    "PLR0913",
    # The processor waterfall is intentionally one orchestrator function
    "PLR0915",
    # This codebase uses many domain-specific thresholds and fixture literals
    "PLR2004",
    # `subprocess` call sites are reviewed directly in this CLI-heavy codebase
    "S603",
    # Partial executable-path checks are too noisy for these media-tool invocations
    "S607",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use plain `assert`, narrow private seams, and test-only helpers
"webinar_transcriber/**/tests/*.py" = [
    # Test fixtures and monkeypatch seams do not benefit from exhaustive annotations
    "ANN",
    # Tests intentionally accept unused fixture and helper arguments
    "ARG",
    # Test docstrings are kept lightweight
    "D",
    # pydoclint is kept focused on production code
    "DOC",
    # Naive datetimes in tests are usually deterministic fixture data
    "DTZ",
    # Local imports are often clearer in monkeypatched or dependency-seam tests
    "PLC0415",
    # Test predicates sometimes read clearest as explicit `a or b`
    "PLR1714",
    # Plain `assert` is the standard pytest style
    "S101",
    # Temporary test paths under pytest-managed directories are expected
    "S108",
]
# ASR tests exercise narrow failure paths on private transcriber helpers
"webinar_transcriber/tests/test_asr.py" = ["SLF001"]
# UI reporter tests inspect internal state transitions that are hard to assert publicly
"webinar_transcriber/tests/test_ui.py" = ["SLF001"]

[tool.pymarkdown.plugins.md013]
line_length = 100
code_block_line_length = 100
heading_line_length = 100

[tool.ty.src]
include = ["webinar_transcriber"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.*)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "webinar_transcriber/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["webinar_transcriber"]
